[package]
name = "airline"
description = "No dependancy web server"
version = "0.1.0"
edition = "2021"
authors = ["Jackson Zamorano"]
documentation = "https://github.com/jacksonzamorano/airline"
repository = "https://github.com/jacksonzamorano/airline"
homepage = "https://github.com/jacksonzamorano/airline"
license-file = "LICENSE.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "airline"
path = "src/server/mod.rs"
crate-type = ["lib"]

[[bin]]
name = "airline"
path = "src/main.rs"

[dependencies]
airline-macros = "0.1.0"